Быстренько передалал для гита

--- a/style.css
+++ b/style.css
@@ -1,17 +1,16 @@
-$block-size: 50px;
-
 main {
     height: 100vh;
-}
-.container {
+  }
+  
+  .container {
     display: flex;
     flex-direction: row;
     align-items: stretch;
     justify-content: center;
     padding: 20px;
-}
-
-.blocks {
+  }
+  
+  .blocks {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -20,42 +19,36 @@ main {
     border: 1px solid silver;
     max-height: 400px;
     overflow-x: hidden;
-    .blocks-item {
-        margin-bottom: 20px;
-    }
-}
-
-.blocks-item {
-    width: $block-size;
-    height: $block-size;
-    max-height: $block-size;
-    max-width: $block-size;
-    min-width: $block-size;
-    min-height: $block-size;
+  }
+  .blocks .blocks-item {
+    margin-bottom: 20px;
+  }
+  
+  .blocks-item {
+    width: 50px;
+    height: 50px;
+    max-height: 50px;
+    max-width: 50px;
+    min-width: 50px;
+    min-height: 50px;
     font-size: 0;
     cursor: pointer;
-
-    &.blocks-item--animate {
-        transition: .3s ease top, .3s ease left;
-    }
-    
-    &.blocks-item--door {
-        .block-left,
-        .block-right,
-        .block-top {
-            background-image: url(./door.png);
-        }
-    }
-    &.blocks-item--angle {
-        .block-left,
-        .block-right,
-        .block-top {
-            background-image: url(./angle.png);
-        }
-    }
-}
-
-.wrapper {
+  }
+  .blocks-item.blocks-item--animate {
+    transition: 0.3s ease top, 0.3s ease left;
+  }
+  .blocks-item.blocks-item--door .block-left,
+  .blocks-item.blocks-item--door .block-right,
+  .blocks-item.blocks-item--door .block-top {
+    background-image: url(./door.png);
+  }
+  .blocks-item.blocks-item--angle .block-left,
+  .blocks-item.blocks-item--angle .block-right,
+  .blocks-item.blocks-item--angle .block-top {
+    background-image: url(./angle.png);
+  }
+  
+  .wrapper {
     width: 100%;
     height: 100%;
     pointer-events: none;
@@ -63,12 +56,12 @@ main {
     left: 0;
     top: 0;
     transform-style: preserve-3d;
-    transform: rotateY(-215deg) rotateX(15deg) rotateZ(-10deg)
-}
-
-.block-left,
-.block-right,
-.block-top {
+    transform: rotateY(-215deg) rotateX(15deg) rotateZ(-10deg);
+  }
+  
+  .block-left,
+  .block-right,
+  .block-top {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -77,35 +70,36 @@ main {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-}
-
-.block-left {
-    transform: translateZ(-$block-size/2);
-    // background-color: orange;
+  }
+  
+  .block-left {
+    transform: translateZ(-25px);
     background-position: left center;
-}
-
-.block-right {
+  }
+  
+  .block-right {
     transform: translateX(-50%) rotateY(90deg);
-    // background-color: lightgreen;
     background-position: center center;
-}
-
-.block-top {
+  }
+  
+  .block-top {
     transform: translateY(-50%) rotateX(90deg);
-    // background-color: skyblue;
     background-position: right center;
-}
-
-.view {
+  }
+  
+  .view {
     display: flex;
     flex-grow: 1;
     position: relative;
     border: 1px solid gray;
     height: 400px;
-}
-
-.blocks-item {
+  }
+  
+  .blocks-item {
     transform-style: preserve-3d;
     transform-origin: 50% 50% 0;
-}
+  }
+  
+  
+  
+  /*# sourceMappingURL=/style.97fcb138.85b67d64.css.map */
